--- a/knowit/src/App.css
+++ b/knowit/src/App.css
@@ -45,7 +45,7 @@
     /* font-size: 19px; */
     margin: 15px 35px;
     padding: 15px 40px;
-    min-width: 150px;
+    /* min-width: 150px; */
     border-radius: 20px;
     /* min-height: 150px; */
     color: #fff;
@@ -117,4 +117,31 @@
   right: 0;
   z-index: 99;
   background: rgba(0,0,0,0.5);
+}
+
+@media screen and (min-width: 601px) {
+  .button {
+    font-size: 20px;
+    margin: 15px 35px;
+    padding: 15px 40px;
+    /* min-width: 150px; */
+    border-radius: 20px;
+  }
+  .word {
+	font-size: 135px;
+  }
+}
+
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 600px) {
+  .button {
+    font-size: 15px;
+    margin: 10px 30px;
+    padding: 10px 35px;
+    /* min-width: 150px; */
+    border-radius: 10px;
+  }
+  .word {
+	font-size: 72px;
+  }
 }
