--- a/knowit/src/App.css
+++ b/knowit/src/App.css
@@ -36,6 +36,11 @@
   fill: orange;
 }
 
+.option {
+    margin: 15px 35px;
+    padding: 15px 40px;
+}
+
 .button {
     background: linear-gradient(45deg, #337ab7, transparent);
     border: none;
@@ -43,8 +48,7 @@
     font-family: 'Quicksand', sans-serif;
     font-weight: 700;
     /* font-size: 19px; */
-    margin: 15px 35px;
-    padding: 15px 40px;
+    padding: 15px 20px;
     /* min-width: 150px; */
     border-radius: 20px;
     /* min-height: 150px; */
@@ -122,11 +126,13 @@
 @media screen and (min-width: 601px) {
   .button {
     font-size: 20px;
-    margin: 15px 35px;
-    padding: 15px 40px;
     /* min-width: 150px; */
     border-radius: 20px;
   }
+  .option {
+    margin: 15px 35px;
+    padding: 15px 40px;
+   }
   .word {
 	font-size: 135px;
   }
@@ -141,7 +147,42 @@
     /* min-width: 150px; */
     border-radius: 10px;
   }
+  .option {
+    margin: 10px 30px;
+    padding: 10px 35px;
+   }
   .word {
 	font-size: 72px;
   }
+}
+
+.card {
+  margin: 10px;
+  padding: 10px;
+}
+
+.level_card {
+  background: repeating-linear-gradient(45deg, #22c3b4, transparent 100px);
+  border: none;
+  min-width: 100px;
+  border-radius: 5px !important;
+  margin: 20px;
+  padding: 20px;
+  cursor: pointer;
+
+}
+
+.testset_card {
+	border-radius: 10px;
+    border-width: 4px;
+    border-color: lightcoral;
+    cursor: pointer;
+
+}
+
+.report_card {
+    margin: 2px;
+    padding: 2px;
+    min-width: 100%;
+    display: inline-table;
 }
