--- a/knowit/src/App.css
+++ b/knowit/src/App.css
@@ -186,3 +186,34 @@
     min-width: 100%;
     display: inline-table;
 }
+
+.login_card {
+    margin-top: 80px;
+    padding: 5% 10%;
+    width: 50%;
+    margin-left: 25%;
+    align-items: center;
+    min-width: 400px;
+}
+
+.login_switch {
+    /* margin-left: 30.7%; */
+    /* float: right; */
+    padding: 15px;
+    width: 7%;
+    min-width: 80px;
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+    border-width: 4px;
+    border: solid;
+    background: #36c6d8;
+    color: #ffffff;
+    font-weight: 900;
+    cursor: pointer;
+    position: absolute;
+    /* z-index: 0; */
+    text-align: center;
+}
+
+.switch_container {
+  margin-left: 117%;
+}
