--- a/knowit/src/App.css
+++ b/knowit/src/App.css
@@ -351,11 +351,23 @@ ul.checkout-bar li:nth-child(5):before {
 ul.checkout-bar li:nth-child(6):before {
   content: "6";
 }
-ul.checkout-bar a {
-  color: #57aed1;
-  font-size: 16px;
-  font-weight: 600;
-  text-decoration: none;
+ul.checkout-bar li:nth-child(7):before {
+  content: "7";
+}
+ul.checkout-bar li:nth-child(8):before {
+  content: "8";
+}
+ul.checkout-bar li:nth-child(9):before {
+  content: "9";
+}
+ul.checkout-bar li:nth-child(10):before {
+  content: "10";
+}
+ul.checkout-bar li:nth-child(11):before {
+  content: "11";
+}
+ul.checkout-bar li:nth-child(12):before {
+  content: "12";
 }
 
 @media all and (min-width: 800px) {
@@ -364,20 +376,21 @@ ul.checkout-bar a {
     background-size: 35px 35px;
     background-color: #8bc53f;
     background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
-    background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
     -webkit-box-shadow: inset 2px 2px 2px 0px rgba(0, 0, 0, 0.2);
+    background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
     box-shadow: inset 2px 2px 2px 0px rgba(0, 0, 0, 0.2);
     content: "";
     height: 15px;
-    width: 100%;
-    left: 50%;
+    width: 96%;
+    left: 4%;
+	border-radius: 10px;
     position: absolute;
-    top: -50px;
+    top: -30px;
     z-index: 0;
   }
 
   .checkout-wrap {
-    margin: 80px auto;
+    margin: 40px auto;
   }
 
   ul.checkout-bar {
@@ -386,6 +399,7 @@ ul.checkout-bar a {
     background-size: 35px 35px;
     background-color: #EcEcEc;
     background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.4) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 75%, transparent 75%, transparent);
+    -webkit-box-shadow: inset 2px 2px 2px 0px rgba(0, 0, 0, 0.2);
     background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.4) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 75%, transparent 75%, transparent);
     border-radius: 15px;
     height: 15px;
@@ -394,52 +408,38 @@ ul.checkout-bar a {
     position: absolute;
     width: 100%;
   }
-  ul.checkout-bar:before {
-    background-size: 35px 35px;
-    background-color: #57aed1;
-    background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
-    background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
-    -webkit-box-shadow: inset 2px 2px 2px 0px rgba(0, 0, 0, 0.2);
-    box-shadow: inset 2px 2px 2px 0px rgba(0, 0, 0, 0.2);
-    border-radius: 15px;
-    content: " ";
-    height: 15px;
-    left: 0;
-    position: absolute;
-    width: 10%;
+  ul.checkout-bar li.visited {
+    background: none;
   }
   ul.checkout-bar li {
     display: inline-block;
-    margin: 50px 0 0;
+    margin: 30px 0 0;
     padding: 0;
     text-align: center;
-    width: 19%;
   }
   ul.checkout-bar li:before {
     height: 45px;
-    left: 40%;
     line-height: 45px;
     position: absolute;
-    top: -65px;
+	left: 0%;
+    top: -45px;
     width: 45px;
     z-index: 99;
-  }
-  ul.checkout-bar li.visited {
-    background: none;
   }
   ul.checkout-bar li.visited:after {
     background-size: 35px 35px;
     background-color: #57aed1;
     background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
-    background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
     -webkit-box-shadow: inset 2px 2px 2px 0px rgba(0, 0, 0, 0.2);
+    background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
     box-shadow: inset 2px 2px 2px 0px rgba(0, 0, 0, 0.2);
     content: "";
     height: 15px;
-    left: 50%;
+    left: 15%;
     position: absolute;
-    top: -50px;
-    width: 100%;
+    top: -30px;
+	border-radius: 10px;
+    width: 95%;
     z-index: 99;
   }
 }
