--- a/knowit/src/App.css
+++ b/knowit/src/App.css
@@ -490,3 +490,12 @@ button.back {
   font-size: 30px;
   background: dimgray;
 }
+
+.thankyou {
+  align-items: center;
+  margin: 100px auto;
+  font-size: xx-large;
+  font-family: cursive;
+  text-align: center;
+  font-size: 100px;
+}
