--- a/knowit/src/App.css
+++ b/knowit/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 .App {
   text-align: center;
 }
@@ -45,7 +46,7 @@
     background: linear-gradient(45deg, #337ab7, transparent);
     border: none;
     text-align: center;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Open Sans' , 'Quicksand', sans-serif;
     font-weight: 700;
     /* font-size: 19px; */
     padding: 15px 20px;
@@ -229,7 +230,7 @@
 .AppName {
   float: left;
   font-size: 2.5em;
-  font-family: cursive;
+  font-family: "Open Sans", cursive;
   color: yellowgreen;
   background: radial-gradient(#ccff0066, transparent);
   cursor: pointer;
@@ -287,7 +288,7 @@
 
 .checkout-wrap {
   color: #444;
-  font-family: 'PT Sans Caption', sans-serif;
+  font-family: "Open Sans", 'PT Sans Caption', sans-serif;
   margin: 70px auto;
   max-width: 100%;
   position: relative;
@@ -461,7 +462,7 @@ ul.checkout-bar li:nth-child(12):before {
   border-width: 9px;
   border-radius: 50%;
   font-size: 72px;
-  font-family: cursive;
+  font-family: "Open Sans", cursive;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
@@ -472,7 +473,7 @@ ul.checkout-bar li:nth-child(12):before {
 .scoreFeedback {
   text-align: center;
   font-size: xx-large;
-  font-family: cursive;
+  font-family: "Open Sans", cursive;
   color: lightslategray;
 }
 
@@ -499,11 +500,74 @@ button.back {
   align-items: center;
   margin: 100px auto;
   font-size: xx-large;
-  font-family: cursive;
+  font-family: "Open Sans", cursive;
   text-align: center;
   font-size: 100px;
 }
 
 .instruct {
   font-size: 25px;
+}
+
+
+
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  box-sizing: border-box;
+}
+
+.tab {
+  padding: 15px;
+  background-color: rgb(24, 26, 30);
+  border: 1px rgba(255,255,255,.15) solid;
+  box-shadow: 0px 3px 10px rgba(255,255,255,.1);
+  /* border-bottom: 5px rgba(255,255,255,.1) solid; */
+  color: rgba(255,255,255,0.5);
+  width: max-content;
+  float: left;
+  margin-left: 15px;
+  position: relative;
+  transition: box-shadow .5s ease 0s, top .5s ease 0s, border .5s ease 0s, color .5s ease 0s;
+  top: 0;
+}
+
+.tab:first-child {
+  margin-left: 0;
+}
+
+.tab:hover {
+  cursor: pointer;
+  box-shadow: 0px 6px 15px rgba(255,255,255,.5);
+  top: -3px;
+  border: 1px rgba(255,255,255,.3) solid;
+  color: rgba(255,255,255,0.8);
+  /* border-bottom: 5px rgba(255,255,255,.3) solid; */ 
+}
+
+.tabs .active {
+  /* border-bottom: 5px rgba(255, 33, 33, 1) solid; */
+  box-shadow: 0px 6px 15px rgba(255, 30, 30, .5);
+  border: 1px rgba(255,30,30,.4) solid;
+  top: -3px;
+  color: rgba(255,50,50,1);
+}
+
+section {
+  margin: 15px auto;
+  width: 700px;
+}
+
+.tabs menu ul {
+  list-style: none;
+}
+
+.tabs menu + div {
+  clear: both;
+  margin-top: 15px;
+  padding: 15px 0;
+  color: white;
+  line-height: 1.5;
+  color: rgba(255,255,255,.6);
 }
