--- a/knowit/src/App.css
+++ b/knowit/src/App.css
@@ -515,7 +515,7 @@ ul.checkout-bar li:nth-child(12):before {
 }
 
 button.back {
-  margin: -25% 0 0 -10%;
+  margin: 0 0 0 -10%;
   height: 65px;
   width: 65px;
   font-size: 30px;
