--- a/knowit/src/App.css
+++ b/knowit/src/App.css
@@ -627,41 +627,36 @@ section {
   cursor: pointer;
 }
 
-.tooltip {
-  position: relative;
-  display: contents;
-  border-bottom: 1px dotted black;
+.exp_container {
+  border: solid;
+  border-color: darkgrey;
+  margin-left: -4px;
+  padding: 10px;
+  border-radius: 5px;
 }
 
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: inherit;
-  background-color: #555;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -60px;
-  opacity: 0;
-  transition: opacity 0.3s;
+.exp_button {
+  color: #ffffff;
+  padding: 5px;
+  margin: 5px;
+  background: #17a2a2;
+  border-radius: 5px;
+  font-weight: bold;
 }
 
-.tooltip .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
+.exp_button:hover {
+  cursor: pointer;
+  box-shadow: 0px 6px 15px rgba(255,255,255,.5);
+  padding: 7px;
+  top: -3px;
 }
 
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
+.exp_button.active {
+  color: #29a2a2;
+  font-weight: bold;
+  background: white;
+  border: solid;
+  border-color: #29a2a2;
+  box-shadow: 0 6px 15px rgb(40, 163, 165);
+  border-radius: 5px;
 }
