--- a/knowit/src/App.css
+++ b/knowit/src/App.css
@@ -255,8 +255,8 @@
 .content {
   padding: 0%;
   margin-bottom: 40px;
-  /* padding: 2%; */
-  /* margin-top: 120px; */
+  margin-top: 20px;
+  margin-left: 14px;
 }
 
 .dashboardCard {
@@ -527,7 +527,7 @@ button.back {
 
 .thankyou {
   align-items: center;
-  margin: 100px auto;
+  margin: 60px auto;
   font-size: xx-large;
   font-family: "Open Sans", cursive;
   text-align: center;
@@ -678,4 +678,12 @@ section {
   left: 91%;
   bottom: 5%;
   font-weight: 300
+}
+
+.student_vocab {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 40px;
+  color: yellowgreen;
+  font-weight: bold;
 }
