--- a/knowit/src/App.css
+++ b/knowit/src/App.css
@@ -205,7 +205,7 @@
     /* margin-left: 30.7%; */
     /* float: right; */
     padding: 15px;
-    width: 5%;
+    /* width: 5%; */
     min-width: 80px;
     box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
     border-width: 4px;
@@ -527,11 +527,11 @@ button.back {
 
 .thankyou {
   align-items: center;
-  margin: 60px auto;
-  font-size: xx-large;
+  /* margin: 60px auto; */
+  /* font-size: xx-large; */
   font-family: "Open Sans", cursive;
   text-align: center;
-  font-size: 100px;
+  font-size: 40px;
 }
 
 .instruct {
@@ -682,7 +682,7 @@ section {
 
 .student_vocab {
   text-align: center;
-  margin-top: 30px;
+  margin: 30px 0px;
   font-size: 40px;
   color: yellowgreen;
   font-weight: bold;
