Update remote app

--- a/knowit/src/App.css
+++ b/knowit/src/App.css
@@ -281,6 +281,10 @@
     left: 85% !important;
     bottom: 0% !important;
   }
+
+  .card.scoreCell {
+    padding: 5px !important;
+  }
 }
 
 .card {
