Display book and non book words

--- a/knowit/src/App.css
+++ b/knowit/src/App.css
@@ -884,3 +884,8 @@ section {
   color: yellowgreen;
   font-weight: bold;
 }
+
+.book_word {
+  position: absolute;
+  margin: -32px 0px 0px 10px;
+}
